# flame-analyzer

./: .gitignore  Dockerfile  LICENSE  README.md  RELEASE_CHECKLIST.md  SKILL.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup_pip.py  test_installation.sh
scripts/: flame_analyzer.py
